--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,7 @@ dependencies {
     }
     androidTestCompile 'com.squareup.okhttp3:mockwebserver:3.7.0'
     androidTestCompile "tools.fastlane:screengrab:1.0.2"
+    androidTestCompile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
 }
 
