--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,9 @@ dependencies {
     }
     androidTestCompile 'com.squareup.okhttp3:mockwebserver:3.7.0'
     androidTestCompile "tools.fastlane:screengrab:1.0.2"
+
+    releaseCompile 'com.adjust.sdk:adjust-android:4.11.1'
+    releaseCompile 'com.google.android.gms:play-services-analytics:10.2.0' // Required by Adjust
 }
 
 task buildBlocklists(type:Exec) {
